feat: images alias

--- a/src/components/molecules/Landing/Contact.astro
+++ b/src/components/molecules/Landing/Contact.astro
@@ -1,5 +1,5 @@
 ---
-import Letter from "../../../images/mail.webp"
+import Letter from "@images/mail.webp"
 import Button from "@components/atoms/Button.astro";
 
 ---
