--- a/src/components/molecules/Landing/Expertise.astro
+++ b/src/components/molecules/Landing/Expertise.astro
@@ -1,5 +1,5 @@
 ---
-import Desktop from "../../../images/hero/computer-dynamic-clay.webp"
+import Desktop from "@images/hero/computer-dynamic-clay.webp"
 ---
 <section id="expertise" class="flex md:flex-row px-4 lg:px-0 flex-col max-w-4xl gap-10 w-full mx-auto pb-36">
     <div>
