--- a/src/components/molecules/Landing/Hero.astro
+++ b/src/components/molecules/Landing/Hero.astro
@@ -1,15 +1,15 @@
 ---
 import Button from '@components/atoms/Button.astro'
-import mailPng from "../../../images/hero/mail-dynamic-clay.png"
-import computerPng from "../../../images/hero/computer-dynamic-clay.png"
-import figmaPng from "../../../images/hero/figma-dynamic-clay.png"
-import lockPng from "../../../images/hero/lock-dynamic-clay.png"
-import bagPng from "../../../images/hero/bag-dynamic-clay.png"
-import mailWebp from "../../../images/hero/mail-dynamic-clay.webp"
-import computerWebp from "../../../images/hero/computer-dynamic-clay.webp"
-import figmaWebp from "../../../images/hero/figma-dynamic-clay.webp"
-import lockWebp from "../../../images/hero/lock-dynamic-clay.webp"
-import bagWebp from "../../../images/hero/bag-dynamic-clay.webp"
+import mailPng from "@images/hero/mail-dynamic-clay.png"
+import computerPng from "@images/hero/computer-dynamic-clay.png"
+import figmaPng from "@images/hero/figma-dynamic-clay.png"
+import lockPng from "@images/hero/lock-dynamic-clay.png"
+import bagPng from "@images/hero/bag-dynamic-clay.png"
+import mailWebp from "@images/hero/mail-dynamic-clay.webp"
+import computerWebp from "@images/hero/computer-dynamic-clay.webp"
+import figmaWebp from "@images/hero/figma-dynamic-clay.webp"
+import lockWebp from "@images/hero/lock-dynamic-clay.webp"
+import bagWebp from "@images/hero/bag-dynamic-clay.webp"
 ---
 
 <section id="hero" class=" overflow-hidden px-4 md:px-0 relative min-h-[500px] max-h-[60vh] h-full flex items-center justify-center mx-auto max-w-8xl mt-12">
