--- a/src/components/molecules/Landing/Reinsurance.astro
+++ b/src/components/molecules/Landing/Reinsurance.astro
@@ -1,7 +1,7 @@
 ---
-import Lock from "../../../images/hero/lock-dynamic-clay.webp"
-import Puzzle from "../../../images/puzzle.png"
-import Gym from "../../../images/gym.png"
+import Lock from "@images/hero/lock-dynamic-clay.webp"
+import Puzzle from "@images/puzzle.png"
+import Gym from "@images/gym.png"
 const cards = [
     {
         icon: Puzzle,
