--- a/src/components/molecules/Landing/Services.astro
+++ b/src/components/molecules/Landing/Services.astro
@@ -1,9 +1,9 @@
 ---
-import Bulb from "../../../images/bulb.webp"
-import Bag from "../../../images/hero/bag-dynamic-clay.webp"
-import Target from "../../../images/target.png"
-import Roll from "../../../images/roll-brush.png"
-import Travel from "../../../images/travel.png"
+import Bulb from "@images/bulb.webp"
+import Bag from "@images/hero/bag-dynamic-clay.webp"
+import Target from "@images/target.png"
+import Roll from "@images/roll-brush.png"
+import Travel from "@images/travel.png"
 
 const getIcon = (icon)=>{
     switch (icon) {
