--- a/src/components/molecules/Landing/StudyCases.astro
+++ b/src/components/molecules/Landing/StudyCases.astro
@@ -1,5 +1,5 @@
 ---
-import Rocket from "../../../images/rocket.webp"
+import Rocket from "@images/rocket.webp"
 const cases = [
     {
         title: 'La Folklorique bière etc',
