--- a/src/components/molecules/Landing/Tools.astro
+++ b/src/components/molecules/Landing/Tools.astro
@@ -1,5 +1,5 @@
 ---
-import Pen from "../../../images/pencil.webp"
+import Pen from "@images/pencil.webp"
 const toolsList = [
     {
         title: "Frontend",
