--- a/src/components/organisms/Footer.astro
+++ b/src/components/organisms/Footer.astro
@@ -1,7 +1,7 @@
 ---
 import Icon from "@components/atoms/Icon.astro";
 import LeafIcon from "@components/atoms/LeafIcon.astro";
-import Contact from "../molecules/Landing/Contact.astro";
+import Contact from "@components/molecules/Landing/Contact.astro";
 const date = new Date()
 const links = [
     {
