--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -22,7 +22,7 @@ import Main from "@layouts/Main.astro";
 const {post, nextPost} = Astro.props
 ---
 
-<Main title={post.name}>
+<Main title={post.name} description={nextPost.content.intro}>
     <Breadcrumb navigation={[ { title:"Blog", href:"/blog" }, {title:post.name, href:"#"} ]} />
     <div class="max-w-[64ch] mx-auto space-y-4 px-4 lg:px-0">
         <figure class="rounded-md overflow-hidden aspect-video">
