--- a/src/components/molecules/Landing/References.astro
+++ b/src/components/molecules/Landing/References.astro
@@ -19,7 +19,7 @@ const comments = await datacomments.json()
     <div data-comment class="overflow-hidden mt-12 mx-auto max-w-2xl md:px-11 md:py-12 p-4 bg-gray-50 rounded-md shadow-xl">
         <div class="transition-all relative flex items-center gap-3">
             <figure class="shrink-0 w-9 h-9 rounded-full overflow-hidden">
-                <img  data-current-comment-picture src={comments.stories[0].content.picture.filename} alt="">    
+                <img width="200" height="200"  data-current-comment-picture src={comments.stories[0].content.picture.filename} alt="">    
             </figure>
             <p>
                 <span  data-current-comment-name>{comments.stories[0].content.name}</span>, <span  data-current-comment-job>{comments.stories[0].content.job}</span></p>
