--- a/src/components/molecules/Landing/Reinsurance.astro
+++ b/src/components/molecules/Landing/Reinsurance.astro
@@ -25,7 +25,7 @@ const cards = [
     {cards.map(card=>
     <div class=" space-y-5 bg-gray-50 p-4 md:p-7 rounded-md md:shadow-xl">
         <figure class="w-12 h-12">
-            <img src={card.icon} alt="">
+            <img width="200" height="200" src={card.icon} alt="">
         </figure>
         <h3 class=" text-3xl font-semibold">
             {card.title}
