--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -17,16 +17,18 @@ import Author from "@components/molecules/BlogPost/Author.astro";
 import FeaturedBlogPost from "@components/molecules/BlogPost/FeaturedBlogPost.astro";
 import Breadcrumb from "@components/molecules/Breadcrumb.astro";
 import Main from "@layouts/Main.astro";
+import { getWidthAndHeight } from 'utils/image-size';
 
 
 const {post, nextPost} = Astro.props
+const image = getWidthAndHeight(post.content.thumbnail.filename)
 ---
 
-<Main title={post.name} description={nextPost.content.intro}>
+<Main title={post.name} description={post.content.intro}>
     <Breadcrumb navigation={[ { title:"Blog", href:"/blog" }, {title:post.name, href:"#"} ]} />
     <div class="max-w-[64ch] mx-auto space-y-4 px-4 lg:px-0">
         <figure class="rounded-md overflow-hidden aspect-video">
-            <img height="1920" width="1080" class="w-full object-cover" src={"https:" + post.content.image} alt="">
+            <img height={image.height} width={image.width} class="w-full object-cover" src={post.content.thumbnail.filename} alt="">
         </figure>
         <h1 class="text-4xl font-semibold">
             {post.name}
