--- a/src/components/molecules/BlogPost/CurrentBlogPostPreview.astro
+++ b/src/components/molecules/BlogPost/CurrentBlogPostPreview.astro
@@ -1,4 +1,5 @@
 ---
+import Image from "@components/atoms/Image.astro";
 import ReadMore from "@components/atoms/ReadMore.astro";
 import { getWidthAndHeight } from "utils/image-size";
 const { picture,href, title, text } = Astro.props
@@ -7,7 +8,7 @@ const image = getWidthAndHeight(picture.filename)
 
 <article class="flex flex-col lg:flex-row gap-4 p-4 relative rounded-md lg:hover:bg-gray-100 transition">
     <figure class="shrink-0 aspect-video max-w-md">
-        <img width={image.width} height={image.height} class="object-cover object-center h-full w-full " src={picture.filename}alt="">
+        <Image file={picture.filename} classes="object-cover object-center h-full w-full"/>
     </figure>
     <div class="">
         <h2 class="text-3xl">{title}</h2>
