--- a/src/components/molecules/BlogPost/FeaturedBlogPost.astro
+++ b/src/components/molecules/BlogPost/FeaturedBlogPost.astro
@@ -10,6 +10,6 @@ const { href,title, text } = Astro.props
     <div>
         <h3 class="text-lg font-semibold">{title}</h3>
         <p class="line-clamp-2">{text}</p>
-        <ReadMore href={href}/>
+        <ReadMore href={"/blog/" + href}/>
     </div>
 </div>
