--- a/src/components/molecules/BlogPost/FeaturedBlogPost.astro
+++ b/src/components/molecules/BlogPost/FeaturedBlogPost.astro
@@ -3,7 +3,7 @@ import ReadMore from "@components/atoms/ReadMore.astro";
 const { href,title, text } = Astro.props
 ---
 
-<div class="relative bg-gray-200 transition lg:hover:bg-gray-100 space-x-4 flex p-4 rounded-md">
+<div class="relative bg-gray-200 transition lg:hover:bg-gray-100 gap-4 md:space-x-4 flex flex-col md:flex-row p-4 rounded-md">
     <figure class="w-52 shrink-0">
         <img src="https://via.placeholder.com/1920x1080" alt="">
     </figure>
