fix: markdown font size & team gap

--- a/src/components/molecules/Landing/Team.astro
+++ b/src/components/molecules/Landing/Team.astro
@@ -9,7 +9,7 @@ const {stories} = await data.json()
 
 <section id="team" class="max-w-5xl mx-auto w-full p-7 rounded-md bg-gray-100 mb-36 flex flex-col items-center">
     <h2 class="text-center text-3xl mb-10 font-semibold">Notre équipe</h2>
-    <ul class="md:grid md:grid-cols-3 flex flex-col gap-6 md:gap-24 w-full mb-10">
+    <ul class="md:grid md:grid-cols-3 flex flex-col md:gap-24 w-full mb-10">
         {stories.map(member=>
         <li>
             <figure class="flex flex-row items-center md:block relative">
