--- a/src/components/molecules/Landing/Hero.astro
+++ b/src/components/molecules/Landing/Hero.astro
@@ -12,23 +12,23 @@ import lockWebp from "@images/hero/lock-dynamic-clay.webp"
 import bagWebp from "@images/hero/bag-dynamic-clay.webp"
 ---
 
-<section id="hero" class=" overflow-hidden px-4 md:px-0 relative min-h-[500px] max-h-[60vh] h-full flex items-center justify-center mx-auto max-w-8xl mt-12">
+<section id="hero" class=" overflow-hidden px-4 md:px-0 relative min-h-[500px] max-h-[60vh] h-full flex items-center justify-center mx-auto max-w-8xl md:mt-12">
     <picture width="500" height="500" id="mail" class="opacity-0 md:block hidden absolute right-96 top-0 w-36 rotate-[27deg]">
         <source width="500" height="500" srcset={mailWebp} type="image/webp">
         <source width="500" height="500" srcset={mailPng} type="image/png">
         <img width="500" height="500" src={mailPng} alt="">
     </picture>
-    <picture width="500" height="500" id="computer" class="opacity-0 absolute w-52 -rotate-[14deg] left-7 top-12">
+    <picture width="500" height="500" id="computer" class="hidden md:block opacity-0 absolute w-52 -rotate-[14deg] left-7 top-12">
         <source width="500" height="500" srcset={computerWebp} type="image/webp">
         <source width="500" height="500" srcset={computerPng} type="image/png">
         <img width="500" height="500" src={computerPng} alt="">
     </picture>
-    <picture width="500" height="500" id="figma" class="opacity-0 absolute w-36 rotate-[35deg] right-12 top-40 blur-[2px]">
+    <picture width="500" height="500" id="figma" class="hidden md:block opacity-0 absolute w-36 rotate-[35deg] right-12 top-40 blur-[2px]">
         <source width="500" height="500" srcset={figmaWebp} type="image/webp">
         <source width="500" height="500" srcset={figmaPng} type="image/png">
         <img width="500" height="500" src={figmaPng} alt="">
     </picture>
-    <picture width="500" height="500" id="lock" class="opacity-0 absolute rotate-[40deg] w-36 left-64 bottom-10 blur-[3px]">
+    <picture width="500" height="500" id="lock" class="hidden md:block opacity-0 absolute rotate-[40deg] w-36 left-64 bottom-10 blur-[3px]">
         <source width="500" height="500" srcset={lockWebp} type="image/webp">
         <source width="500" height="500" srcset={lockPng} type="image/png">
         <img width="500" height="500" src={lockPng} alt="">
@@ -42,7 +42,7 @@ import bagWebp from "@images/hero/bag-dynamic-clay.webp"
         <h1 class="max-w-3xl leading-tight font-title md:text-center text-4xl md:text-6xl text-primary-800">Vos projets, au
             pixel près
         </h1>
-        <p class="md:text-center max-w-xl p-4 backdrop-blur-md bg-opacity-40 bg-white rounded-md">
+        <p class="md:text-center max-w-xl backdrop-blur-md bg-opacity-40 bg-white rounded-md">
             loak.studio est une agence de développement web à Tournai en Belgique. Notre équipe est composée de
             développeurs web et des designers afin de couvrir tous les aspects de la création de site internet et
             d’application web.
