--- a/src/components/organisms/Nav.astro
+++ b/src/components/organisms/Nav.astro
@@ -3,7 +3,7 @@ import Logo from "@components/atoms/Logo.astro";
 
 ---
 
-<header class="max-w-5xl  w-full mx-auto my-12 px-4 lg:px-0">
+<header class="max-w-5xl  w-full mx-auto my-4 md:my-12 px-4 lg:px-0">
     <a class="block" href="/">
         <Logo />
     </a>
