feat(footer): blog icon

--- a/src/components/organisms/Footer.astro
+++ b/src/components/organisms/Footer.astro
@@ -34,6 +34,11 @@ const links = [
         href: 'https://instagram.com/loakstudio',
         label: 'Instagram'
     },
+    {
+        icon:'blog',
+        href:'/blog/',
+        label:'Blog'
+    }
 ]
 ---
 <Contact/>
@@ -73,7 +78,7 @@ const links = [
                 </li>
                 )}
             </ul>
-            <a class="mt-8 block" href="/blog">Blog</a>
+           
         </nav>
     </div>
 </div>
