--- a/src/components/atoms/Icon.astro
+++ b/src/components/atoms/Icon.astro
@@ -63,6 +63,13 @@ const {name,size=44, classes}= Astro.props
   <line x1="12" y1="15" x2="12" y2="18" />
 
             )
+        case "blog":
+            return(
+  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+  <path d="M6 4h11a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-11a1 1 0 0 1 -1 -1v-14a1 1 0 0 1 1 -1m3 0v18" />
+  <line x1="13" y1="8" x2="15" y2="8" />
+  <line x1="13" y1="12" x2="15" y2="12" />
+            )
         default:
             return <p>Unknown</p>
     }
