feat(service): smaller bulb on mobile

--- a/src/components/molecules/Landing/Services.astro
+++ b/src/components/molecules/Landing/Services.astro
@@ -29,7 +29,7 @@ const {stories} = await data.json()
     
     <div class="max-w-6xl w-full mx-auto relative">
 
-        <img id="bulb" width="500" height="500" class="absolute right-0 -rotate-12 top-28 max-w-[230px]" src={Bulb} alt="">
+        <img id="bulb" width="500" height="500" class="absolute right-0 -rotate-12 top-28 max-w-[80px] md:max-w-[230px]" src={Bulb} alt="">
         <div class=" p-2 md:p-7 bg-white lg:shadow-xl max-w-2xl rounded-md">
             <h3 class=" font-semibold text-3xl mb-5">Nos services</h3>
             <p class="mb-10">Nous avons des solutions à chacun de vos problèmes</p>
