--- a/src/style/markdown.css
+++ b/src/style/markdown.css
@@ -1,5 +1,5 @@
 .markdown h1 {
-  @apply text-3xl md:text-5xl font-semibold mb-12 font-title text-center;
+  @apply text-3xl md:text-5xl font-semibold my-12 font-title text-center;
 }
 .markdown h2 {
   @apply text-2xl md:text-4xl font-semibold my-8;
