--- a/src/components/organisms/Footer.astro
+++ b/src/components/organisms/Footer.astro
@@ -72,7 +72,7 @@ const links = [
                 {links.map(link=>
                 <li class="flex gap-3 items-center">
                     <Icon size={20} name={link.icon}/>
-                    <a class="hover:underline" href={link.href}>
+                    <a target="_blank" class="hover:underline" href={link.href}>
                         {link.label}
                     </a>
                 </li>
