--- a/src/components/molecules/Landing/Services.astro
+++ b/src/components/molecules/Landing/Services.astro
@@ -37,7 +37,7 @@ const {stories} = await data.json()
             <ul class=" space-y-7 md:flex md:flex-col md:items-start">
                 {stories.map(service=>
                 <li
-                    class="w-full md:w-auto flex group items-center overflow-hidden gap-7 before:transition-all transition before:w-full before:-left-full before:z-0 before:absolute hover:before:left-0 before:h-full before:bg-gray-100 relative border-transparent border hover:delay-100 hover:border-primary-500 p-2 rounded-md">
+                    class="w-full md:w-auto flex group items-center overflow-hidden gap-7 md:before:transition-all transition md:before:w-full md:before:-left-full md:before:z-0 md:before:absolute hover:md:before:left-0 md:before:h-full md:before:bg-gray-100 relative border-transparent md:border hover:delay-100 hover:border-primary-500 p-2 rounded-md">
                     <figure   class="z-10 shrink-0">
                         <img height="50" width="50" class=" w-12 h-12" src={getIcon(service.content.icon)} alt="">
                     </figure>
