fix: ok block font isn't a good SEO idea

--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -37,6 +37,8 @@ title = title.startsWith('loak.studio - ') ? title : title + " | loak.studio"
     <link rel="canonical" href={Astro.canonicalURL}>
     <script defer data-domain="loak.studio" src="https://plausible.io/js/plausible.js"></script>
 
+    <link rel="preload" href="/fonts/Lack-Regular.otf" as="font" type="font/otf" crossorigin>
+    <link rel="preload" href="/fonts/Montserrat-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin>
 
     <script>
         import '../scripts/app.ts';
