feat: some content styling

--- a/src/components/molecules/Landing/Contact.astro
+++ b/src/components/molecules/Landing/Contact.astro
@@ -14,7 +14,7 @@ import Button from "@components/atoms/Button.astro";
             <h2 class="font-semibold text-3xl">Prêt à lancer votre projet?</h2>
             <p class="">Une idée de projet web ? Un site vitrine ?Un e-commerce ? 
                 Prenons contact et parlons-en !</p>
-            <Button extern={true} href="https://calendly.com/loakstudio/30min">Planifier un appel</Button>
+            <Button extern={true} href="https://contact.loak.studio">Planifier un appel</Button>
         </div>
     </section>
 
