--- a/src/components/organisms/Footer.astro
+++ b/src/components/organisms/Footer.astro
@@ -21,7 +21,7 @@ const links = [
     },
     {
         icon: 'calendar',
-        href: 'https://calendly.com/loakstudio/30min',
+        href: 'https://contact.loak.studio',
         label: 'Réserver un appel'
     },
     {
@@ -33,11 +33,6 @@ const links = [
         icon: 'instagram',
         href: 'https://instagram.com/loakstudio',
         label: 'Instagram'
-    },
-    {
-        icon:'blog',
-        href:'/blog/',
-        label:'Blog'
     }
 ]
 ---
@@ -77,6 +72,12 @@ const links = [
                     </a>
                 </li>
                 )}
+                <li  class="flex gap-3 items-center"> 
+                    <Icon size={20} name="blog"/>
+                    <a class="hover:underline" href="/blog/">
+                        Blog
+                    </a>
+                </li>
             </ul>
            
         </nav>
