--- a/src/components/molecules/Landing/References.astro
+++ b/src/components/molecules/Landing/References.astro
@@ -10,7 +10,7 @@ const comments = await datacomments.json()
 
 <section id="references" data-references class="max-w-6xl w-full mx-auto px-4 lg:px-0">
     <h2 class="mb-12 text-primary-800 text-3xl font-semibold text-center">Nos références</h2>
-    <ul class="opacity-0 flex md:justify-center gap-16 overflow-scroll">
+    <ul class="opacity-0 items-center flex md:justify-center gap-16 overflow-scroll" style="-ms-overflow-style: none;">
         {references.stories.map(client=>
         <li class=" shrink-0 lg:shrink">
             <figure class="grayscale transition max-w-[200px]">
@@ -19,15 +19,15 @@ const comments = await datacomments.json()
         </li>
         )}
     </ul>
-    <div data-comment class="overflow-hidden mt-12 mx-auto max-w-2xl md:px-11 md:py-12 p-4 bg-gray-50 rounded-md shadow-xl">
+    <div data-comment class="overflow-hidden mt-12 mx-auto max-w-2xl md:px-11 md:py-12 md:p-4 bg-gray-50 rounded-md md:shadow-xl">
         <div class="transition-all relative flex items-center gap-3">
-            <figure class="shrink-0 w-9 h-9 rounded-full overflow-hidden">
+            <figure class="shrink-0 w-16 h-16 rounded-full overflow-hidden">
                 <img loading="lazy" width={getWidthAndHeight(comments.stories[0].content.picture.filename).width} height={getWidthAndHeight(comments.stories[0].content.picture.filename).height}  data-current-comment-picture src={comments.stories[0].content.picture.filename} alt="">    
             </figure>
             <p>
                 <span  data-current-comment-name>{comments.stories[0].content.name}</span>, <span  data-current-comment-job>{comments.stories[0].content.job}</span></p>
         </div>
-        <blockquote data-current-comment-text class="transition-all relative mt-8">
+        <blockquote data-current-comment-text class="h-32 md:h-24 transition-all relative mt-8">
             {comments.stories[0].content.content}
             </blockquote>
     </div>
