--- a/src/style/markdown.css
+++ b/src/style/markdown.css
@@ -1,12 +1,26 @@
 .markdown h1 {
-  @apply text-3xl md:text-5xl font-semibold my-12 font-title text-center;
+  @apply text-3xl md:text-4xl font-semibold my-12 font-title;
 }
 .markdown h2 {
-  @apply text-2xl md:text-4xl font-semibold my-8;
+  @apply text-2xl md:text-3xl font-semibold my-8;
 }
 .markdown h3 {
-  @apply text-xl md:text-3xl font-semibold my-8;
+  @apply text-xl md:text-2xl font-semibold my-8;
 }
 .markdown p {
   @apply my-4 leading-loose;
+}
+.markdown pre {
+  @apply p-4 rounded-md;
+}
+.markdown p a {
+  @apply text-primary-600 hover:underline;
+}
+
+.markdown ul {
+  @apply list-disc pl-4;
+}
+
+.markdown blockquote {
+  @apply bg-gray-700 text-white px-5 py-1 border-l-primary-600 border-l-8 italic;
 }
