--- a/src/components/molecules/Landing/References.astro
+++ b/src/components/molecules/Landing/References.astro
@@ -19,7 +19,7 @@ const comments = await datacomments.json()
         </li>
         )}
     </ul>
-    <div data-comment class="overflow-hidden mt-12 mx-auto max-w-2xl md:px-11 md:py-12 md:p-4 bg-gray-50 rounded-md md:shadow-xl">
+    <div data-comment class="overflow-hidden mt-12 mx-auto max-w-2xl md:px-11 md:py-12 md:p-4 md:bg-gray-50 rounded-md md:shadow-xl">
         <div class="transition-all relative flex items-center gap-3">
             <figure class="shrink-0 w-16 h-16 rounded-full overflow-hidden">
                 <img loading="lazy" width={getWidthAndHeight(comments.stories[0].content.picture.filename).width} height={getWidthAndHeight(comments.stories[0].content.picture.filename).height}  data-current-comment-picture src={comments.stories[0].content.picture.filename} alt="">    
@@ -27,7 +27,7 @@ const comments = await datacomments.json()
             <p>
                 <span  data-current-comment-name>{comments.stories[0].content.name}</span>, <span  data-current-comment-job>{comments.stories[0].content.job}</span></p>
         </div>
-        <blockquote data-current-comment-text class="h-32 md:h-24 transition-all relative mt-8">
+        <blockquote data-current-comment-text class=" h-40 md:h-24 transition-all relative mt-8">
             {comments.stories[0].content.content}
             </blockquote>
     </div>
