--- a/src/components/molecules/Landing/StudyCases.astro
+++ b/src/components/molecules/Landing/StudyCases.astro
@@ -3,8 +3,9 @@ import Image from "@components/atoms/Image.astro";
 import Rocket from "@images/rocket.webp"
 import { getWidthAndHeight } from "utils/image-size";
 
-const data = await fetch('https://api.storyblok.com/v1/cdn/stories' + `?&token=${import.meta.env.SB_TOKEN}&starts_with=etudes-de-cas&cv=${new Date}`)
+const data = await fetch('https://api.storyblok.com/v1/cdn/stories' + `?&token=${import.meta.env.SB_TOKEN}&sort_by=published_at:desc&starts_with=etudes-de-cas&cv=${new Date}`)
 const {stories} = await data.json()
+console.log(stories)
 ---
 
 <section id="study-cases" class=" opacity-0 pb-36 overflow-x-hidden before:w-full before:absolute before:-z-10 before:h-[650px] lg:before:bg-gray-100">
