--- a/src/pages/service/[slug].astro
+++ b/src/pages/service/[slug].astro
@@ -10,18 +10,44 @@ return stories.map((service) => {
     };
 });
 }
+import Bag from "@images/services-good-quality/bag-iso-clay.webp"
+import Target from "@images/services-good-quality/target-iso-clay.webp"
+import Roll from "@images/services-good-quality/roll-brush-iso-clay.webp"
+import Travel from "@images/services-good-quality/travel-iso-clay.webp"
 import Breadcrumb from "@components/molecules/Breadcrumb.astro";
 import Main from "@layouts/Main.astro";
 import { Markdown } from 'astro/components';
-
+const getIcon = (icon)=>{
+    switch (icon) {
+        case "Bag":
+          return Bag
+          case "Target":
+          return Target
+          case "Roll":
+          return Roll
+          case "Travel":
+          return Travel
+        default:
+            break;
+    }
+}
 
 const service = Astro.props
 ---
 
 <Main title={service.name} description={service.content.content.substr(0,140) + "..."}>
     <Breadcrumb anchor="#services" navigation={[ { title:service.name, href:"#" } ]} />
-    <article class="markdown max-w-[64ch] mx-auto px-4 lg:px-0">
-        <h1>{service.name}</h1>
-        <Markdown content={service.content.content} />
+    <article class=" max-w-6xl mx-auto p-7 sm:bg-gray-100 sm:shadow-xl">
+        <h1 class="font-title  text-5xl text-center mb-12">{service.name}</h1>
+        <div class="flex flex-col sm:flex-row max-w-3xl mx-auto gap-12">
+            <div class=" shrink-0 w-full max-w-[150px]">
+                <figure   class="z-10 shrink-0">
+                    <img class="w-full" src={getIcon(service.content.icon)} alt="">
+                </figure>
+            </div>
+            <div>
+                <Markdown content={service.content.content} />
+            </div>
+        </div>
     </article>
 </Main>
