--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,7 +3,7 @@ import BlogPostPreview from "@components/molecules/BlogPost/BlogPostPreview.astr
 import CurrentBlogPostPreview from "@components/molecules/BlogPost/CurrentBlogPostPreview.astro";
 import Breadcrumb from "@components/molecules/Breadcrumb.astro";
 import Main from "@layouts/Main.astro";
-const data = await fetch('https://api.storyblok.com/v1/cdn/stories' + `?&token=${import.meta.env.SB_TOKEN}&starts_with=blog&cv=${new Date}`)
+const data = await fetch('https://api.storyblok.com/v1/cdn/stories' + `?&token=${import.meta.env.SB_TOKEN}&starts_with=blog&sort_by=published_at:desc&cv=${new Date}`)
     const {stories} = await data.json()
 const firstPost = stories.shift()
 ---
